--- a/app/views/start/gb.html.erb
+++ b/app/views/start/gb.html.erb
@@ -18,13 +18,13 @@
 		<tr>
 			<td class="data_label">姓名：</td>
 			<td class="data_ipt">
-				<input type="text" id="gb_info_name" name="gb[info][name]" size="30" />
+				<input type="text" id="gb_info_name" name="gb[info][name]" />
 			</td>
 		</tr>
 		<tr>
 			<td class="data_label">联系方式：</td>
 			<td class="data_ipt">
-				<input type="text" id="gb_info_contact" name="gb[info][contact]" size="30" />
+				<input type="text" id="gb_info_contact" name="gb[info][contact]" />
 			</td>
 		</tr>
 		<tr>
