--- a/app/views/account/main.html.erb
+++ b/app/views/account/main.html.erb
@@ -30,9 +30,9 @@
 				<ul>
 					<li><a href="/admin/catalogs" title="文章栏目管理" target="main">文章栏目管理</a></li>
 					<li><a href="/admin/topics" title="文章管理" target="main">文章管理</a></li>
-					<li><a href="/admin/posts" title="评论管理" target="main">评论管理</a></li>
-					<li><a href="/admin/pics" title="图片管理" target="main">图片管理</a></li>
-					<li><a href="/admin/atts" title="附件管理" target="main">附件管理</a></li>
+					<li><a href="/admin/comments" title="评论管理" target="main">评论管理</a></li>
+					<!--li><a href="/admin/pics" title="图片管理" target="main">图片管理</a></li>
+					<li><a href="/admin/atts" title="附件管理" target="main">附件管理</a></li-->
 					<li><a href="/admin/topics/trashes" title="文章回收站" target="main">文章回收站</a></li>
 				</ul>
 			</div>
