--- a/app/views/start/gb.html.erb
+++ b/app/views/start/gb.html.erb
@@ -10,32 +10,32 @@
 			<td colspan="2" class="blank"></td>
 		</tr>
 		<tr>
-			<td class="data_label">标题：</td>
-			<td class="data_ipt">
+			<td class="gb-label">标题：</td>
+			<td class="gb-ipt">
 				<%= f.text_field :title %>
 			</td>
 		</tr>
 		<tr>
-			<td class="data_label">姓名：</td>
-			<td class="data_ipt">
+			<td class="gb-label">姓名：</td>
+			<td class="gb-ipt">
 				<input type="text" id="gb_info_name" name="gb[info][name]" />
 			</td>
 		</tr>
 		<tr>
-			<td class="data_label">联系方式：</td>
-			<td class="data_ipt">
+			<td class="gb-label">联系方式：</td>
+			<td class="gb-ipt">
 				<input type="text" id="gb_info_contact" name="gb[info][contact]" />
 			</td>
 		</tr>
 		<tr>
-			<td class="data_label">内容：</td>
-			<td class="data_ipt">
+			<td class="gb-label">内容：</td>
+			<td class="gb-ipt">
 				<%= f.text_area :content %>
 			</td>
 		</tr>
 		<tr>
 			<td>&nbsp;</td>
-			<td class="data_sbt">
+			<td class="gb-sbt">
 				<input type="submit" name="submit" value="提交" />
 			</td>
 		</tr>
