--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
 			<p>
 				<%= @catalogs.map{|c|"<a href=\"" + c.show_url + "\">" + c.name + "</a>"}.join("<i>|</i>").html_safe %>
 			</p>
-			<p><a href="#">关于我们</a><i>|</i><a href="gb">留言</a></p>
+			<p><a href="#">关于我们</a><i>|</i><a href="/gb">留言</a></p>
 			<p>新闻大观 news.nxyouxi.com ©2013  All rights reserved.</p>
 		</div>
 	</div>
